Added packges: Sentry, Themes

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"cartalyst/sentry": "2.1.*",
+		"bigecko/laravel-theme": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
