--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,10 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"extra": {
+		"writable": [
+			"public/assets/uploads"
+		]
+	}
 }
