--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php",
 			"app/AirMinum"
+		],
+		"files": [
+			"app/helper.php"
 		]
 	},
 	"scripts": {
