--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
-			"app/AirMinum"
+			"app/Xkerangka"
 		],
 		"files": [
 			"app/helper.php"
